[project]
name = "dropbin"
version = "0.1.0"
description = "Paste text or shorten a URL — one small app, shipped properly: Postgres, migrations, CI, live deploy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dropbin"]

# -- tooling ----------------------------------------------------------------

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes basics, I = import sorting, UP = modernize syntax
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]